Fixed line width bug on mobile devices

--- a/style.css
+++ b/style.css
@@ -12,6 +12,6 @@ header {
 }
 
 hr {
-    width: 600px;
+    width: 75%;
     border-color: gray;
 }
